--- a/Hawk.ETL.Controls/TaskManagerView.xaml
+++ b/Hawk.ETL.Controls/TaskManagerView.xaml
@@ -27,7 +27,7 @@
 	</UserControl.Resources>
 	<Grid Margin="0"   MinHeight="50" >
 
-        <ListView  x:FieldModifier="public"  x:Name="currentProcessTasksView" ItemContainerStyle="{DynamicResource CenterListViewItem}" ItemsSource="{Binding CurrentProcessTasks}" Margin="0,0,0,20" ToolTip="{DynamicResource taskmanager_desc}">
+        <ListView  x:FieldModifier="public"  x:Name="currentProcessTasksView" ItemContainerStyle="{DynamicResource CenterListViewItem}" ItemsSource="{Binding CurrentProcessTasks}" Margin="0,0,0,20" ToolTip="{DynamicResource threadmanager_desc}">
     		
 			<ListView.View>
 				<GridView>
