--- a/Hawk/Lang/zh-CN.xaml
+++ b/Hawk/Lang/zh-CN.xaml
@@ -1873,25 +1873,21 @@
     
     子任务的功能包含以下三类：
     
-    - {{EtlGE}}，作为生成器，一般在主任务的开头位置，行为和生成器一致。
-        - 如生成全国城市列表的流
-        - 生成某个网站全部分类的流
-    - {{EtlTF}}: 可看成转换器，通常位于任务中间位置
-        - 通过输入url地址，就能转换出该页面中所有需要信息的流
-    - {{EtlEX}}: 作为执行器，一般位于末尾。
-        - 例如可以构造获取某个页面所有图片的执行流
+    - {{EtlGE}}，作为生成器，一般在主任务的开头位置，行为和生成器一致。- 如生成全国城市列表的流，生成某个网站全部分类的流
+    - {{EtlTF}}: 可看成转换器，通常位于任务中间位置 ，例如通过输入url地址，就能转换出该页面中所有需要信息的流
+    - {{EtlEX}}: 作为执行器，一般位于末尾。 例如可以构造获取某个页面所有图片的执行流
 
     为什么不包括子任务-过滤？因为过滤操作通常比较简单，不需要子任务实现。
     
     ## 参数设置
     
-    子任务可以分为两部分：参数部分和执行部分。在本例中，子任务中的第一个`从文本生成`，只是参数，目的是为了子任务设计器能构成输出数据的完整流程。但要想被别的模块调用，则只应该有执行部分。而参数部分，需要主任务传递给子任务。这就是`调用范围`的意义，它能将主任务的指定参数传递到子任务上，成为子任务的一部分。
+    子任务可以分为两部分：参数部分和执行部分。在本文最下面的例中，子任务中的第一个`从文本生成`，只是参数，目的是为了子任务设计器能构成输出数据的完整流程。但要想被别的模块调用，则只应该有执行部分。而参数部分，需要主任务传递给子任务。这就是`调用范围`的意义，它能将主任务的指定参数传递到子任务上，成为子任务的一部分。
     
     举例子，如果一个长度为20个模块的子任务，前两个模块为参数部分，后18个是执行部分，因此调用范围可以写2:18（从0开始）。 当然为了方便，你可以给冒号后第二个数比较大的值，如100。范围的第二个数也可以写成负数，如`2:-2`表示`从第二个模块到倒数第2个模块`
     
-    那么，如果主任务传递的列名，和子任务需要的列名不同时，该怎么处理？ 这就需要属性映射机制。配置子任务的`属性映射`时，可以用`a:b c:d`表示a列映射到b列，以此类推。
+    那么，如果主任务传递的列名，和子任务需要的列名不同时，该怎么处理？ 这就需要属性映射机制。配置子任务的`属性映射`时，可以用`a:b c:d`表示主任务的a列映射到子任务的b列，多个映射用空格分割，以此类推。
     
-    若不需要映射，则直接填写`a c`表示要将a列和c列传递给子任务，主任务不会也不需要将所有的参数都传递给子任务。因此，需要在子任务的转换器上，显式地设置原列名，并用空格分割。
+    若不需要映射，则直接填写`a c`表示要将a列和c列传递给子任务，因为主任务不会也不需要将所有的参数都传递给子任务。因此，需要在子任务的转换器上，显式地设置原列名，并用空格分割。
     
     Hawk3中还提供了图形化配置的界面，大大简化了配置难度，在任何子任务调用的模块里，都可以点击`配置`进入配置页面：
     
@@ -2820,7 +2816,11 @@
 
         欢迎使用Hawk! HAWK无需编程，可见即所得的图形化数据采集和清洗工具，依据GPL协议开源。
 
-        项目主页： https://ferventdesert.github.io/Hawk/
+        项目主页：https://github.com/ferventdesert/Hawk
+
+        项目文档： https://ferventdesert.github.io/Hawk/
+        
+        示例工程文件： https://github.com/ferventdesert/Hawk-Projects
 
         ## 1.介绍
 
@@ -3156,15 +3156,20 @@
 
         拖入的模块顺序是非常重要的，一个常见问题是顺序不对，导致生成的数据不符合预期。{{smartetl_name}}可通过 {{CrawlerTF}} 来调用 {{smartcrawler_name}} ，也可以通过`子任务`来调用其他{{smartetl_name}}，是组合各种模块和任务的工厂。
 
+        {{super_copy}}
+
+     
+
+
+        {{threadmanager_desc}}
+
+        {{SmartETLTool_step}}
+
         ## 运行模式
 
         {{SmartETLTool_debug}}
 
         {{running_mode_desc}}
-
-        {{threadmanager_desc}}
-
-        {{SmartETLTool_step}}
 
     </system:String>
     <system:String x:Key="SmartETLTool_debug" xml:space="preserve">
@@ -3205,6 +3210,44 @@
         
         相比于Hawk2, Hawk3会自动分析可以并行的位置，因此多数情况下，直接运行就可以了。但是如果你想自定义并行化的行为，就需要阅读下面的内容。
 
+
+### 并行化的原理
+
+在调试模式下，所有获取都是串行的。而执行模式下，执行器才会执行。为了更好地理解并行化，强烈建议阅读下面的内容。
+
+#### 最简单的并行化
+
+我们以抓取某个网站的100个页面为例，第一个模块`生成区间数`,可以生成1-100的页面，自然地，就可以创建100个任务，分别抓取了。
+
+![image_1auq4sikn7nb1gug1citurl149pm.png-20.6kB](http://static.zybuluo.com/buptzym/7r3yufza2cshsualz9iz2qd7/image_1auq4sikn7nb1gug1citurl149pm.png)
+
+但是，但如果队首的生成器只生成了很少的元素，每个元素在后期，又会转换为大量的元素，那么这种方法就非常低下了。极端情况下队首生成器只生成一个元素，则并行化就毫无意义：
+
+![image_1auq59r2f42r12u41cue1q6c9cj1t.png-28kB](http://static.zybuluo.com/buptzym/sojkdkg2ta9r2xrx6z7ivrgm/image_1auq59r2f42r12u41cue1q6c9cj1t.png)
+
+#### 改进的并行
+
+一种非常简单的思路，是将其切成两个任务，并行在任务中完成。
+
+![image_1auq4roi010n6lnomf41o56s919.png-63.9kB](http://static.zybuluo.com/buptzym/ulbme5gwk8ns3ykby6efeesx/image_1auq4roi010n6lnomf41o56s919.png)
+
+我们将其看成两个任务，第一个任务，负责产生出一堆种子任务出来，并加入到任务队列，之后再在这些种子的基础上，再分别调用第第二个任务。
+
+如何切分任务？取决于你在任务中插入的`{{ToListTF}}`的位置。这个位置就是切分为两个任务的“切割点”。
+
+以大众点评为例， 北京有14个区县，有30种美食类型，如果直接在区县后插入并行，则只有14个子任务，任务数量太少：那么先通过任务1,获取420个元素，再以420个元素的基础上，插入并行，这样速度就快很多了。你也可以在14个区县之后插入并行化，那么就有14个子任务。
+
+反过来，如果每个任务的工作量太少，比如只访问一次网站内容，则这样的种子创建并行就显得成本高昂，因此可以填写分组并行数量，比如10，那么Hawk就会以10个元素为一组，创建任务。
+
+![image_1auq5ldh81i2n6ajqhe1ns23k72a.png-25kB](http://static.zybuluo.com/buptzym/by68ones5fqurqicpswhbdex/image_1auq5ldh81i2n6ajqhe1ns23k72a.png)
+
+#### Hawk自动分析并行点
+
+Hawk除了手工设置并行点，还能自动分析并行点，那么并行点是不是越靠后越好呢？不是的，这样分的太细，每个任务要处理的数据特别少：依赖于批量执行的模块会有性能损失: 例如{{DbEX}},批量插入100条数据速度很快，但按条插入就不快了。
+
+但若尽量靠前，则任务分得特别粗，在断点续跑时，任务需要更多的时间达到相同的位置（这点不够直观，可以理解为层级越多，则进行查找所需的步数越少）
+
+目前Hawk采用了尽量靠后的策略，未来可能会在这方面变得更加智能。
 
     </system:String>
     <system:String x:Key="threadmanager_desc" xml:space="preserve">
@@ -3330,6 +3373,8 @@
     </system:String>
     <system:String x:Key="SupplierTF_desc">
         尝试对已有错误日志重跑补数据，错误日志需包含错误所在的任务名和模块名
+
+        {{topic_supplier}}
     </system:String>
     <system:String x:Key="xpath_detector">
         XPath检索
@@ -3613,6 +3658,29 @@
 
     </system:String>
 
+ <system:String x:Key="how_to_ask" xml:space="preserve">
+
+    ## 如何提问
+     
+    Hawk是个免费的系统，因此没有客服mm（谁请得起，设计者也不够帅），因此好的问题能极大地提升解决问题的速度。请按照如下方式描述你的问题：
+
+    - 抓取的网站地址，要抓取什么内容，在页面的什么位置，是什么范围。 
+    - 如果能提供你的工程文件，可在附录中给出，这能最大程度解决问题。
+    - 如果是界面出现异常，请提供在什么环境下，点击什么按钮，报出什么异常，并发送所执行文件夹的log.dat日志文件作为附件。
+    - 操作系统版本，.Net Framework环境（不是必须）
+
+    请尽量避免如下提问方式，这样的提问没有任何意义，作者也无法解决你的问题：
+
+    - XXX网站怎么爬
+    - XXX不会用，用不了
+    - XXX出问题了
+    
+    提问按照如下优先级进行：
+
+    1. 推荐使用Github的issue,方便其他朋友查阅已有的问题。: https://github.com/ferventdesert/Hawk/issues
+    2. 加入QQ群： //TODO：增加群号
+    3. 给作者发邮件:  buptzym@qq.com    
+   </system:String>
     <system:String x:Key="qa_list" xml:space="preserve">
 
     # 常见问题
@@ -3818,11 +3886,32 @@
     </system:String>
 
     <system:String x:Key="topic_increase_get" xml:space="preserve">
-   # 增量,自动化定时抓取专题
+   # 命令行增量和自动化专题
    
-   Hawk虽然是图形化软件，但依然支持命令行和自动化抓取，本专题讨论如何增量，和自动化定时抓取。
+   Hawk虽然是图形化软件，但依然支持命令行和自动化抓取，本专题讨论如何增量，和自动化定时抓取，以及当遇到错误时（如网络不通，导致一部分请求失败）需要重试的场景。
+
+   ## 命令行执行
+
+   (本特性的测试还不完全，预计2018年11月发布）
+
+   由于大多数服务器都基于Linux实现，因此跨平台成为Hawk必备的功能。但Hawk依赖的WPF(一种windows的图形界面技术)只能在windows上运行。 因此为了变通，可在Hawk上图形化设计工作流，并在其他平台上解释xml执行。 
+   
+   - 一种是实现Python的执行器(etlpy)，但由于Python和C#的众多区别，会导致很多不兼容性，该方案已放弃。
+   - 另一种方案，是通过.NetCore实现跨平台，我们采用了本方案。 
+    
+   定时抓取需依赖于Hawk的命令行实现HawkScheduler， 它位于Hawk可执行文件的同目录中。使用如下命令指定要执行的工程文件路径和任务名:
+
+   `HawkScheduler -p project.xml -t task_name`
+
+   使用`HawkScheduler -h`来获得相关帮助。
+
+   注意，由于命令行本身的性质，以下特性将不可用：
+
+   - 写入数据表: 将生成可执行文件同目录下，以数据表为名称的txt文件
+   - TODO：增加其他不可支持的特性
 
    ## 增量抓取
+
    增量抓取比较困难，各网站皆有不同，此处我们提供一些技巧。
    
    一种类型是新闻型的，按照时间排列，并更新最新的新闻，最朴素的思路是记录上一次抓取的最后位置。然后在新的一轮抓取中，不停地向前获取，直到发现上一次抓取后中断。
@@ -3837,7 +3926,46 @@
    ### 下次执行时定位到中断点
    在任务配置时，添加`正则过滤`，正则项的值填写为`{column}`，代表从配置中读取该值。
 
+   ## 定时抓取
+   
+   在实现命令行功能后，定时抓取也就变得非常简单了。 
+   
+   在Linux平台上，可使用crontab来执行任务，具体可参考[这里](https://www.cnblogs.com/longjshz/p/5779215.html)
+
+   在Windows上则可以使用任务计划来执行。可以参考[这里](https://www.cnblogs.com/SZxiaochun/p/6370702.html)
+
+   TODO： 增加更细致的写法
+
+   {{topic_supplier}}
+
     </system:String>
+
+    
+  <system:String x:Key="topic_supplier" xml:space="preserve">
+   ## 回补数据方法
+
+   本功能简直是神器，Hawk能够精确地记录失败的位置和上下文，并在重试时将配置错误和失败部分补充回来。配置非常简单，但功能很强大。
+
+   开启该功能，需要在系统设置中勾选{{is_generate_error_collection}}, 则{{smartetl_name}}在执行时，就会将错误的信息保存到一张新表中，除了当时错误时的参数输入列之外，增加的列如下：
+
+   - __SysETL: 产生错误时的任务名
+   - __SysTime: 错误时间
+   - __SysERROR: 错误原因
+   - __SysObjectID: 产生错误的模块唯一ID
+   
+   出现错误后，可使用如下流程创建补数据任务:
+
+   0. 根据错误的信息，确定修改的策略，如增加延时，改进参数，修复bug等..
+   1. 添加{{TableGE}}, 表名为刚才创建的错误表表名。
+   2. 可以按需拖入{{DelayTF}}，或其他你希望的过滤，转换等模块
+   2. 拖入{{SupplierTF}}, 勾选是否要执行原来的执行器。
+   3. 如果想把回补的数据写到另外一张表，则可拖入{{TableEX}}, 或{{DbEX}}. 或任何你想要处理的流程。
+
+   在补数据时，尽量使用串行模式，以获取更平稳的表现。可能在补充数据时会再次发生错误，此时只要将{{TableEX}}的名称改为新产生错误的表名即可。
+
+   其原理是定位到发生错误的模块，并使用当时的参数重新调用该模块之后的任务。这就是流系统的强大之处。
+    </system:String>
+
 
     <system:String x:Key="topic_ajax" xml:space="preserve">
   # 动态页面抓取专题
@@ -4070,9 +4198,30 @@ json选择器选择“文档列表”模式即可，不需要python转换器。
     5. 如果你喜欢Hawk，请star该项目，欢迎给作者打赏，你的鼓励是作者改进软件的最大动力。
 
 
+   {{how_to_ask}}
+   
     </system:String>
 
-    <system:String x:Key="auto_schduler" xml:space="preserve">
+    <system:String x:Key="static_check" xml:space="preserve">
+    ## 静态检查
+    
+    Hawk3.5支持对不合理的模块调用，以及配置做出检查，方便提前定位问题。
+
+    ### 输出可优化警告
+    
+    - {{DelayTF}}置于模块列表最下方，在{{parallel_mode}}下无效
+    - 转换器的输入列不存在
+    - 大量重复的模块调用
+
+    ### 输出错误警告
+
+    在此情况下，会提示用户修改，除非用户强制忽略所有错误：
+
+    - 使用{{DbEX}}，但列名不符合sqlite等数据库的规范
+    
+
+
+
     </system:String>
     <system:String x:Key="develop" xml:space="preserve">
     # 编译和扩展开发
@@ -4128,6 +4277,22 @@ json选择器选择“文档列表”模式即可，不需要python转换器。
     这方面如果有任何问题，欢迎联系作者，不过我打赌，因为想新开发组件而找我的朋友，一年最多三个
     </system:String>
 
+   <system:String x:Key="super_copy" xml:space="preserve">
+       ## 超级拷贝
+       
+       Hawk3.5增强了对拷贝功能的支持，使得操作更加简便。
+
+       不论是数据表列表，任务,模块或工作线程列表，都可以使用windows键盘快捷键shift+鼠标来多选，或使用ctrl+a全选，选择后即可执行删除和暂停等操作。
+       
+        对于最常用的模块列表，右键即可拷贝当前所选的模块。已拷贝的模块支持如下功能：
+
+       - 可以直接粘贴到任何文本编辑器中，这在手动编辑xml工程文件时很有用。
+       - 拷贝到本任务或其他任务的任一模块的上侧或下侧
+
+       //TODO:增加一个图
+        
+       这带来了显著的好处，任务间能够更方便地共享配置和参数，方便重用。你亦可将配置拷贝到GitHub或其他社群中，方便他人定位问题。
+       </system:String>
     <system:String x:Key="project" xml:space="preserve">
       Hawk使用工程(Project)的概念描述一组任务的集合。在工程中，所有的任务可以互相引用，任务也可以访问内部的数据表，连接器和配置。 一个典型的工程包含以下内容：
 
@@ -4146,6 +4311,8 @@ json选择器选择“文档列表”模式即可，不需要python转换器。
       {{auto_save}}
     
       {{proj_format}}
+
+      {{super_copy}}
 
       {{global_config}}
 
