--- a/Hawk.ETL.Controls/DataProcessManagerUI.xaml
+++ b/Hawk.ETL.Controls/DataProcessManagerUI.xaml
@@ -7,14 +7,16 @@
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
 
 
-             xmlns:Connectors="clr-namespace:Hawk.Core.Connectors;assembly=Hawk.Core" xmlns:System="clr-namespace:System;assembly=mscorlib" xmlns:Hawk_Core_Themes="clr-namespace:Hawk.Core.Themes;assembly=Hawk.Core" x:Class="Hawk.ETL.Controls.DataProcessManagerUI"
+             xmlns:Connectors="clr-namespace:Hawk.Core.Connectors;assembly=Hawk.Core" xmlns:System="clr-namespace:System;assembly=mscorlib" xmlns:Hawk_Core_Themes="clr-namespace:Hawk.Core.Themes;assembly=Hawk.Core"
+    xmlns:converters="clr-namespace:Hawk.ETL.Controls.Converters"
+    x:Class="Hawk.ETL.Controls.DataProcessManagerUI"
 
 
              mc:Ignorable="d"  d:DesignWidth="972.666" d:DesignHeight="465.502">
     <UserControl.Resources>
         <ResourceDictionary>
-
-        	<Hawk_Core_Themes:TaskMetroConverter x:Key="TaskMetroConverter"/>
+          
+            <Hawk_Core_Themes:TaskMetroConverter x:Key="TaskMetroConverter"/>
 
    <Style x:Key="GroupContainerStyle" TargetType="{x:Type GroupItem}">
                 <Setter Property="Template">
@@ -112,6 +114,23 @@
 				</StackPanel>
             </DataTemplate>
             <System:Double x:Key="UltraFont">21.333</System:Double>
+            <DataTemplate x:Key="MarketItemTemplate">
+            	<Grid    HorizontalAlignment="Stretch" Height="Auto" VerticalAlignment="Stretch" Margin="0,10">
+            		<Grid.ColumnDefinitions>
+            			<ColumnDefinition Width="0.894*"/>
+            			<ColumnDefinition Width="0.106*"/>
+            		</Grid.ColumnDefinitions>
+            		<Image Source="{Binding ImgURL}" Width="180" Height="100" Margin="0,0,0.75,0"/>
+            		<StackPanel Grid.Column="1" HorizontalAlignment="Right" Margin="0,8,0,14" Orientation="Vertical" Width="Auto" d:LayoutOverrides="Height">
+            			<Label Content="{Binding Name}" ToolTip="{Binding Description}" Margin="0" VerticalAlignment="Stretch"  FontSize="{DynamicResource UltraFont}" HorizontalAlignment="Left" Width="Auto" />
+            			<Label Content="{Binding Description}" ToolTip="{Binding Description}" Margin="0,10,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Left" Width="Auto" />
+            			<Label Content="{Binding PublishTime}"  Margin="10,0,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Left" Width="Auto" />
+            		</StackPanel>
+            	</Grid>
+            </DataTemplate>
+            <DataTemplate x:Key="DataCollectionTemplate">
+            	 <TextBlock Text="{Binding Name}" FontSize="{DynamicResource LargeFont}"></TextBlock>
+            </DataTemplate>
           
 
         </ResourceDictionary>
@@ -245,9 +264,77 @@
         			</StackPanel>
         		</TabItem.Header>
         		<Grid>
-        			<ListBox x:Name="listBox"  DataContext="{Binding}" ToolTip="{DynamicResource key_725}"  SelectedItem="{Binding SelectedTask}" ItemsSource="{Binding ProjectTaskList}"  HorizontalContentAlignment="Stretch" Margin="30,35,289.999,8"    ItemTemplate="{DynamicResource DataTemplate2}"  >
+        			<Grid.ColumnDefinitions>
+        				<ColumnDefinition Width="0.469*"/>
+        				<ColumnDefinition Width="0.531*"/>
+        			</Grid.ColumnDefinitions>
+        			<ScrollViewer Grid.Column="1" Margin="25,56.5,40,8">
+        				<StackPanel  DataContext="{Binding SelectedLocalProject}" Orientation="Vertical">
+        					<TextBlock TextWrapping="Wrap" Text="{Binding Name}" FontSize="{DynamicResource UltraFont}" Margin="0,10,0,0"/>
+        					<StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+        						<TextBlock TextWrapping="Wrap" Text="{Binding Author}" FontSize="{DynamicResource LargeFont}" Margin="0,0,20,0"/>
+        						<TextBlock TextWrapping="Wrap" Text="{Binding PublishTime}" FontSize="{DynamicResource LargeFont}" Margin="0,0,20,0"/>
+        					</StackPanel>
+        					<TextBlock TextWrapping="Wrap" Text="{DynamicResource key_314}" FontSize="{DynamicResource LargeFont}" Margin="0,20,0,0"/>
+						     
+        					<FlowDocumentScrollViewer  Grid.Row="0"
+        						Grid.Column="1"  
+        						VerticalAlignment="Stretch"
+        						HorizontalAlignment="Stretch"
+        						Margin="1,10,1,1"
+												  
+        						Document="{Binding Description, Converter={StaticResource TextToFlowDocumentConverter}}" IsToolBarVisible="True" />
+                           
+						   
+						   <TextBlock TextWrapping="Wrap" Text="{DynamicResource key_333}" FontSize="{DynamicResource LargeFont}" Margin="0,20,0,0"/>
+        					<ListBox x:Name="listBox"  ToolTip="{DynamicResource key_725}"  SelectedItem="{Binding SelectedTask}" ItemsSource="{Binding Tasks}"  HorizontalContentAlignment="Stretch"    ItemTemplate="{DynamicResource DataTemplate2}" Height="132.922" Margin="0,10,0,0"  >
+        						<ListBox.Resources>
+        							<ContextMenu x:Key="resourceContextMenu"  ItemsSource="{Binding BindingCommands.ChildActions[1].ChildActions}"/>
+        							<Style TargetType="{x:Type ListBoxItem}"  BasedOn="{StaticResource {x:Type ListBoxItem}}">
+        								<Setter Property="ContextMenu" Value="{StaticResource resourceContextMenu}" />
+
+        							</Style>
+        						</ListBox.Resources>
+
+
+
+        						<ListBox.GroupStyle>
+        							<GroupStyle ContainerStyle="{StaticResource GroupContainerStyle}">
+        								<GroupStyle.HeaderTemplate>
+        									<DataTemplate>
+        										<Border BorderBrush="Black" BorderThickness="1" Height="30">
+        											<TextBlock Text="{Binding Name}"  FontWeight="Bold" />
+        										</Border>
+        									</DataTemplate>
+        								</GroupStyle.HeaderTemplate>
+        							</GroupStyle>
+        						</ListBox.GroupStyle>
+
+
+
+        					</ListBox>
+							   <TextBlock TextWrapping="Wrap" Text="{DynamicResource table_list}" FontSize="{DynamicResource LargeFont}" Margin="0,20,0,0"/>
+							   <ListBox ItemsSource="{Binding DataCollections}" ItemTemplate="{DynamicResource DataCollectionTemplate}"  />
+							   
+        				</StackPanel>
+        			</ScrollViewer>
+        			<StackPanel Margin="30,10,-223.667,0" Orientation="Horizontal" VerticalAlignment="Top" d:LayoutOverrides="Width">
+        				<Rectangle Width="20" Height="20" Margin="0,0,10,0" >
+        					<Rectangle.Fill>
+        						<VisualBrush Stretch="Fill"
+        							Visual="{Binding ConverterParameter=magnify, Converter={StaticResource MetroConverter}, Mode=OneWay}"  />
+        					</Rectangle.Fill>
+        				</Rectangle>
+        				<StackPanel Orientation="Horizontal" d:LayoutOverrides="Width">
+        					<TextBlock TextWrapping="Wrap" HorizontalAlignment="Left"><Run Language="zh-cn" Text="{DynamicResource key_730}" /></TextBlock>
+        					<TextBox TextWrapping="Wrap" Text="{Binding SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" MinWidth="100" Margin="20,0,0,0"/>
+        				</StackPanel>
+        				<Button Style="{DynamicResource middleButton}" DataContext="{Binding BindingCommands.ChildActions[7].ChildActions[0]}" Width="35"
+        					Height="35" HorizontalAlignment="Left" d:LayoutOverrides="Height" Margin="20,0,0,0" />
+        			</StackPanel>
+        			<ListBox x:Name="marketItemListBox"  DataContext="{Binding}" ToolTip="{DynamicResource key_725}"  SelectedItem="{Binding SelectedRemoteProject}" ItemsSource="{Binding MarketProjectList}"  HorizontalContentAlignment="Stretch" Margin="36,56.5,26.333,8"    ItemTemplate="{DynamicResource MarketItemTemplate}"  >
         				<ListBox.Resources>
-        					<ContextMenu x:Key="resourceContextMenu"  ItemsSource="{Binding BindingCommands.ChildActions[1].ChildActions}"/>
+        					<ContextMenu x:Key="resourceContextMenu"  ItemsSource="{Binding BindingCommands.ChildActions[7].ChildActions}"/>
 
         					<Style TargetType="{x:Type ListBoxItem}"  BasedOn="{StaticResource {x:Type ListBoxItem}}">
         						<Setter Property="ContextMenu" Value="{StaticResource resourceContextMenu}" />
@@ -272,18 +359,6 @@
 
 
         			</ListBox>
-        			<StackPanel Margin="30,10,289.999,0" Orientation="Horizontal" VerticalAlignment="Top" d:LayoutOverrides="Width">
-        				<Rectangle Width="20" Height="20" Margin="0,0,10,0" >
-        					<Rectangle.Fill>
-        						<VisualBrush Stretch="Fill"
-        							Visual="{Binding ConverterParameter=magnify, Converter={StaticResource MetroConverter}, Mode=OneWay}"  />
-        					</Rectangle.Fill>
-        				</Rectangle>
-        				<StackPanel Orientation="Horizontal" d:LayoutOverrides="Width">
-        					<TextBlock TextWrapping="Wrap" HorizontalAlignment="Left"><Run Language="zh-cn" Text="{DynamicResource key_730}" /></TextBlock>
-        					<TextBox TextWrapping="Wrap" Text="{Binding SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" MinWidth="100" Margin="20,0,0,0"/>
-        				</StackPanel>
-        			</StackPanel>
         		</Grid>
         	</TabItem>
         	<TabItem Background="{x:Null}" >
