add auto load market

--- a/Hawk/Lang/DefaultLanguage.xaml
+++ b/Hawk/Lang/DefaultLanguage.xaml
@@ -2440,6 +2440,8 @@
         - `[a]`：A列中的内容
         - `{config}` : 工程全局配置中键为config的值
 
+        当原始字符串已经包含了大括号，如{ab{0}c}，却只需替换{0}中的内容，但Hawk会提示格式有误，此时可以用两个括号来转义，例如刚才的例子，可改为`{{ab{0}c}}`
+
         总结来说： 方括号代表从本行的其他列，大括号可从全局配置中读取内容
         若全局配置或数据中不包含对应的内容，则该列自动为空
     </system:String>
@@ -2587,7 +2589,7 @@
         插入失败
     </system:String>
     <system:String x:Key="key_307">
-        加载项目
+        加载工程
     </system:String>
     <system:String x:Key="key_193">
         抓取目标
