--- a/Hawk.ETL.Controls/DataProcessManagerUI.xaml
+++ b/Hawk.ETL.Controls/DataProcessManagerUI.xaml
@@ -85,7 +85,7 @@
           
 
             <DataTemplate x:Key="DataTemplate2">
-                <StackPanel   mvvm:ListItemDoubleClick.Property="BindingCommands.ChildActions[1].ChildActions[0]"  HorizontalAlignment="Stretch" Height="30" VerticalAlignment="Stretch" Width="Auto" Orientation="Horizontal"   >
+                <StackPanel    HorizontalAlignment="Stretch" Height="30" VerticalAlignment="Stretch" Width="Auto" Orientation="Horizontal"   >
                     <Rectangle Width="20" Height="20" VerticalAlignment="Center" Margin="0,0,10,0" >
                 		<Rectangle.Fill>
                 			<VisualBrush Stretch="Fill"
@@ -269,7 +269,7 @@
         				<ColumnDefinition Width="0.531*"/>
         			</Grid.ColumnDefinitions>
         			<ScrollViewer Grid.Column="1" Margin="25,56.5,40,8">
-        				<StackPanel  DataContext="{Binding SelectedLocalProject}" Orientation="Vertical">
+        				<StackPanel  DataContext="{Binding SelectedLocalProject,IsAsync=True}" Orientation="Vertical">
         					<TextBlock TextWrapping="Wrap" Text="{Binding Name}" FontSize="{DynamicResource UltraFont}" Margin="0,10,0,0"/>
         					<StackPanel Orientation="Horizontal" Margin="0,10,0,0">
         						<TextBlock TextWrapping="Wrap" Text="{Binding Author}" FontSize="{DynamicResource LargeFont}" Margin="0,0,20,0"/>
@@ -287,7 +287,7 @@
                            
 						   
 						   <TextBlock TextWrapping="Wrap" Text="{DynamicResource key_333}" FontSize="{DynamicResource LargeFont}" Margin="0,20,0,0"/>
-        					<ListBox x:Name="listBox"  ToolTip="{DynamicResource key_725}"  SelectedItem="{Binding SelectedTask}" ItemsSource="{Binding Tasks}"  HorizontalContentAlignment="Stretch"    ItemTemplate="{DynamicResource DataTemplate2}" Height="132.922" Margin="0,10,0,0"  >
+        					<ListBox x:Name="listBox"  ToolTip="{DynamicResource key_725}"  SelectedItem="{Binding SelectedTask}" ItemsSource="{Binding Tasks}"  HorizontalContentAlignment="Stretch"    ItemTemplate="{DynamicResource DataTemplate2}" Margin="0,10,0,0"  >
         						<ListBox.Resources>
         							<ContextMenu x:Key="resourceContextMenu"  ItemsSource="{Binding BindingCommands.ChildActions[1].ChildActions}"/>
         							<Style TargetType="{x:Type ListBoxItem}"  BasedOn="{StaticResource {x:Type ListBoxItem}}">
@@ -332,7 +332,7 @@
         				<Button Style="{DynamicResource middleButton}" DataContext="{Binding BindingCommands.ChildActions[7].ChildActions[0]}" Width="35"
         					Height="35" HorizontalAlignment="Left" d:LayoutOverrides="Height" Margin="20,0,0,0" />
         			</StackPanel>
-        			<ListBox x:Name="marketItemListBox"  DataContext="{Binding}" ToolTip="{DynamicResource key_725}"  SelectedItem="{Binding SelectedRemoteProject}" ItemsSource="{Binding MarketProjectList}"  HorizontalContentAlignment="Stretch" Margin="36,56.5,26.333,8"    ItemTemplate="{DynamicResource MarketItemTemplate}"  >
+        			<ListBox x:Name="marketItemListBox"  DataContext="{Binding}" ToolTip="{DynamicResource key_725}"  SelectedItem="{Binding SelectedRemoteProject}" ItemsSource="{Binding MarketProjectList,IsAsync=True}"  HorizontalContentAlignment="Stretch" Margin="36,56.5,26.333,8"    ItemTemplate="{DynamicResource MarketItemTemplate}"  >
         				<ListBox.Resources>
         					<ContextMenu x:Key="resourceContextMenu"  ItemsSource="{Binding BindingCommands.ChildActions[7].ChildActions}"/>
 
