--- a/Hawk.ETL.Controls/DataProcessManagerUI.xaml
+++ b/Hawk.ETL.Controls/DataProcessManagerUI.xaml
@@ -123,7 +123,7 @@
             		<Image Source="{Binding ImgURL}" Width="180" Height="100" Margin="0,0,0.75,0"/>
             		<StackPanel Grid.Column="1" HorizontalAlignment="Right" Margin="0,8,0,14" Orientation="Vertical" Width="Auto" d:LayoutOverrides="Height">
             			<Label Content="{Binding Name}" ToolTip="{Binding Description}" Margin="0" VerticalAlignment="Stretch"  FontSize="{DynamicResource UltraFont}" HorizontalAlignment="Left" Width="Auto" />
-            			<Label Content="{Binding Description}" ToolTip="{Binding Description}" Margin="0,10,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Left" Width="Auto" />
+            			<Label Content="{Binding ShortDescription}" ToolTip="{Binding Description}" Margin="0,10,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Left" Width="Auto" />
             			<Label Content="{Binding PublishTime}"  Margin="10,0,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Left" Width="Auto" />
             		</StackPanel>
             	</Grid>
@@ -274,7 +274,9 @@
         					<StackPanel Orientation="Horizontal" Margin="0,10,0,0">
         						<TextBlock TextWrapping="Wrap" Text="{Binding Author}" FontSize="{DynamicResource LargeFont}" Margin="0,0,20,0"/>
         						<TextBlock TextWrapping="Wrap" Text="{Binding PublishTime}" FontSize="{DynamicResource LargeFont}" Margin="0,0,20,0"/>
+									<TextBlock TextWrapping="Wrap" Text="{Binding ShortDescription}" FontSize="{DynamicResource LargeFont}" Margin="0,0,20,0"/>
         					</StackPanel>
+							
         					<TextBlock TextWrapping="Wrap" Text="{DynamicResource key_314}" FontSize="{DynamicResource LargeFont}" Margin="0,20,0,0"/>
 						     
         					<FlowDocumentScrollViewer  Grid.Row="0"
